--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource-variable/jost": "^5.1.2",
-    "astro": "^5.1.5"
+    "astro": "^5.1.5",
+    "astro-icon": "^1.1.5"
   }
 }
